#
# Copyright (C) 2024 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "libsignal-keytrans"
version = "0.0.1"
authors.workspace = true
license.workspace = true
edition = "2021"

[lints]
workspace = true

[dependencies]
curve25519-dalek = { workspace = true }
displaydoc = { workspace = true }
ed25519-dalek = { workspace = true }
hmac = { workspace = true }
prost = { workspace = true }
sha2 = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
criterion = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
proptest = { workspace = true }
test-case = { workspace = true }
uuid = { workspace = true }

[[bench]]
name = "verify"
harness = false
