[package]
name = "signal-media"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition = "2021"

[lints]
workspace = true

[dependencies]
futures-util = { workspace = true }
mediasan-common = { workspace = true }
mp4san = { version = "0.5.3", optional = true }
thiserror = { workspace = true }
webpsan = { version = "0.5.3", optional = true, default-features = false }

[features]
default = ["mp4san", "webpsan"]
mp4san = ["dep:mp4san"]
webpsan = ["dep:webpsan"]
