[package]
name = "signal-media"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition = "2024"

[lints]
workspace = true

[dependencies]
futures-util = { workspace = true }
mediasan-common = { workspace = true }
mp4san = { workspace = true, optional = true }
thiserror = { workspace = true }
webpsan = { workspace = true, optional = true }

[features]
default = ["mp4san", "webpsan"]
mp4san = ["dep:mp4san"]
webpsan = ["dep:webpsan"]
