#
# Copyright (C) 2023 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "signal-pin"
authors = ["Signal Messenger LLC"]
version = "0.1.0"
edition = "2021"
description = "A library for operating on signal pins"
license = "AGPL-3.0-only"

[dependencies]
argon2 = { version = "0.5.0", features = ["zeroize"] }
displaydoc = "0.2"
hkdf = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
static_assertions = "1.1"

[dev-dependencies]
hex-literal = "0.4.1"
hmac = { version = "0.12", features = ["reset"] }
criterion = "0.5"


[[bench]]
name = "hash"
harness = false
