#
# Copyright (C) 2023 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "signal-pin"
authors = ["Signal Messenger LLC"]
version = "0.1.0"
edition = "2021"
description = "A library for operating on signal pins"
license = "AGPL-3.0-only"

[dependencies]
argon2 = { version = "0.5.0", features = ["zeroize"] }
displaydoc = { workspace = true }
hkdf = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }
sha2 = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
hex-literal = { workspace = true }
hmac = { workspace = true, features = ["reset"] }
proptest = { workspace = true }


[[bench]]
name = "hash"
harness = false
