#
# Copyright 2020-2022 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "poksho"
version = "0.7.0"
authors = ["Signal Messenger LLC"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
curve25519-dalek = "4.1.3"
hmac = { version = "0.12", features = ["reset"] }
sha2 = "0.10"

[dev-dependencies]
hex = "0.4"

# For benchmarking
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "sho"
harness = false
