#
# Copyright (C) 2020-2022 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "libsignal-protocol"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition = "2021"

[lints]
workspace = true

[dependencies]
libsignal-core = { workspace = true }
signal-crypto = { workspace = true }

aes = { workspace = true, features = ["zeroize"] }
aes-gcm-siv = { workspace = true }
arrayref = { workspace = true }
assert_matches = { workspace = true }
async-trait = { workspace = true }
ctr = { workspace = true, features = ["zeroize"] }
derive-where = { workspace = true }
derive_more = { workspace = true, features = ["deref", "from", "into"] }
displaydoc = { workspace = true }
hex = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
pqcrypto-kyber = { workspace = true, features = ["std"] }
pqcrypto-traits = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
zerocopy = { workspace = true, features = ["derive"] }

# WARNING: pqcrypto-kyber 0.8 and 0.7 don't actually coexist, they both depend on the same C symbols.
# We keep this here for if/when that gets cleared up.
pqcrypto-ml-kem = { workspace = true, features = ["std"], optional = true }

[features]
kyber768 = []
# ML-KEM matches the NIST standard version of Kyber. It may still change
# incompatibly until the final version of the standard is published and
# libsignal will update to match.
mlkem1024 = ["pqcrypto-ml-kem"]

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
const-str = { workspace = true }
criterion = { workspace = true }
env_logger = { workspace = true }
futures-util = { workspace = true }
proptest = { workspace = true }
rand_core = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[[bench]]
name = "session"
harness = false

[[bench]]
name = "ratchet"
harness = false

[[bench]]
name = "sealed_sender"
harness = false

[[bench]]
name = "kem"
harness = false
required-features = ["kyber768"]
