#
# Copyright (C) 2023 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#
[package]
name = "libsignal-svr3"
version = "0.1.0"
edition = "2021"
authors = ["Signal Messenger LLC"]
license = "AGPL-3.0-only"

[dependencies]
attest = { path = "../attest" }

base64 = "0.21.5"
curve25519-dalek = { version = "4.0", features = ["rand_core"] }
displaydoc = "0.2"
hkdf = "0.12"
http = "1.0.0"
prost = "0.12.1"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
strum_macros = "0.26"
subtle = "2.5"
tokio = { version = "1.33.0", features = [] }

[dev-dependencies]
assert_matches = "1.5"
bytemuck = "1.13.0"
criterion = "0.5"
hex = "0.4"
hex-literal = "0.4.1"
nonzero_ext = "0.3.0"
test-case = "3.2.1"

[build-dependencies]
prost-build = "0.12.1"
