#
# Copyright 2020-2022 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "zkgroup"
version = "0.9.0"
authors = ["Signal Messenger LLC"]
edition = "2021"
description = "A zero-knowledge group library"
license = "AGPL-3.0-only"

[dependencies]
libsignal-core = { path = "../core" }
poksho = { path = "../poksho" }
signal-crypto = { path = "../crypto" }
zkcredential = { path = "../zkcredential", features = ["rayon"] }

curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.1', version = "4.1.1", features = ["serde"] }

aes-gcm-siv = "0.11.1"
bincode = "1.2.1"
derive-where = "1.2.5"
displaydoc = "0.2"
hex = "0.4.0"
hex-literal = "0.4.1"
hkdf = "0.12"
lazy_static = "1.4.0"
num_enum = "0.6.1"
partial-default = { version = "0.1.0", features = ["derive"] }
rayon = "1.8.0"
serde = { version = "1.0.106", features = ["derive"] }
sha2 = "0.10.0"
subtle = "2.3"
uuid = "1.1.2"

# For generation
base64 = { version = "0.21", optional = true }
rand = { version = "0.8", optional = true }


[dev-dependencies]
rand = "0.8"
uuid = { version = "1", features = ["v5"] }

# For benchmarking
criterion = "0.5"
test-case = "3.3.1"

[[bench]]
name = "zkgroup_benchmarks"
harness = false

[[bench]]
name = "serialization"
harness = false

[[bin]]
name = "generate_server_params"
required-features = ["base64", "rand"]

[[bin]]
name = "generate_generic_server_params"
required-features = ["base64", "rand"]
